--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,59 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b50d627",
+   "id": "05f79ac1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_workstyle_compliance(flattened_df, month_list):\n",
+    "    \"\"\"\n",
+    "    For each month in month_list:\n",
+    "    - Calculates actual days at any office\n",
+    "    - Applies compliance logic based on static expected days\n",
+    "    - Adds 'Workstyle Met? <Month>' column\n",
+    "    \"\"\"\n",
+    "    for month in month_list:\n",
+    "        # Column names\n",
+    "        actual_col = f\"Actual Days at Office {month}\"\n",
+    "        status_col = f\"Workstyle Met? {month}\"\n",
+    "\n",
+    "        # Step 1: Compute actual days at office (sum of all office types)\n",
+    "        flattened_df[actual_col] = (\n",
+    "            flattened_df.get(f\"Office A {month}\", 0)\n",
+    "            + flattened_df.get(f\"Office B {month}\", 0)\n",
+    "            + flattened_df.get(f\"Office C {month}\", 0)\n",
+    "            # Add more office types if needed\n",
+    "        )\n",
+    "\n",
+    "        # Step 2: Apply compliance classification\n",
+    "        def classify(row):\n",
+    "            expected = row[\"Monthly Expected Workstyle Days\"]\n",
+    "            actual = row[actual_col]\n",
+    "\n",
+    "            if pd.isna(expected) or pd.isna(actual):\n",
+    "                return \"Unknown\"\n",
+    "\n",
+    "            # Apply cutoff logic\n",
+    "            if expected == 1:\n",
+    "                lower, upper = 3.4, 5.0\n",
+    "            else:\n",
+    "                lower, upper = 6.4, 10.0\n",
+    "\n",
+    "            if actual < lower:\n",
+    "                return \"% Not Met\"\n",
+    "            elif actual > upper:\n",
+    "                return \"% Exceeding\"\n",
+    "            else:\n",
+    "                return \"% Met\"\n",
+    "\n",
+    "        flattened_df[status_col] = flattened_df.apply(classify, axis=1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2587e9d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8e9bdf1",
+   "id": "91622df8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10bfbe31",
+   "id": "0b425cd3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b063184",
+   "id": "1f5840c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8404028e",
+   "id": "024ccb20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "017977e8",
+   "id": "df628e68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c3e32c6",
+   "id": "0a6abfed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "301cd3a8",
+   "id": "9a3c26a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +560,6 @@
     "\n",
     "    weekly_df[\"Travel Flag\"] = weekly_df.apply(is_travel, axis=1)\n",
     "    return weekly_df\n",
-    "\n",
     "\n",
     "\n",
     "monthly, weeks_lookup = extract_weeks_lookup_table(monthly)\n",
