--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eedf8a45",
+   "id": "53438dab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,49 +22,44 @@
     "\n",
     "```python\n",
     "def generate_overall_summary(flattened_df):\n",
+    "  def generate_overall_summary(flattened_df):\n",
     "    \"\"\"\n",
-    "    Returns a DataFrame with:\n",
-    "    - Total unique employees\n",
-    "    - MD-wise employee counts\n",
-    "    - Count of employees with missing MD\n",
-    "    - GCB 3 employees per MD\n",
+    "    Returns a clean MD-wise summary DataFrame with:\n",
+    "    - MD Name (including 'Missing MD' for blanks)\n",
+    "    - Unique employee count under each MD\n",
+    "    - GCB 3 employee count under each MD\n",
     "    \"\"\"\n",
-    "    # Unique employee base\n",
-    "    unique_employees = flattened_df[\"Employee ID\"].dropna().unique()\n",
-    "    total_employees = len(unique_employees)\n",
     "\n",
-    "    # MD-wise counts\n",
+    "    # Replace missing MDs with label\n",
+    "    df = flattened_df.copy()\n",
+    "    df[\"MD Name\"] = df[\"MD Name\"].fillna(\"Missing MD\")\n",
+    "\n",
+    "    # Total employees per MD\n",
     "    md_counts = (\n",
-    "        flattened_df.dropna(subset=[\"MD Name\"])\n",
-    "        .groupby(\"MD Name\")[\"Employee ID\"]\n",
+    "        df.groupby(\"MD Name\")[\"Employee ID\"]\n",
     "        .nunique()\n",
     "        .reset_index(name=\"Employees under MD\")\n",
     "    )\n",
     "\n",
-    "    # Missing MD count\n",
-    "    missing_md_count = flattened_df[\"MD Name\"].isna().groupby(flattened_df[\"Employee ID\"]).any().sum()\n",
-    "\n",
-    "    # GCB 3 under each MD\n",
+    "    # GCB 3 employees per MD\n",
     "    gcb3_counts = (\n",
-    "        flattened_df[flattened_df[\"Global Career Band\"] == \"3\"]\n",
+    "        df[df[\"Global Career Band\"] == \"3\"]\n",
     "        .groupby(\"MD Name\")[\"Employee ID\"]\n",
     "        .nunique()\n",
     "        .reset_index(name=\"GCB 3 Employees\")\n",
     "    )\n",
     "\n",
-    "    # Merge MD summaries\n",
+    "    # Merge both summaries\n",
     "    md_summary = pd.merge(md_counts, gcb3_counts, on=\"MD Name\", how=\"outer\").fillna(0)\n",
     "\n",
-    "    # Add totals\n",
-    "    totals = pd.DataFrame({\n",
-    "        \"Metric\": [\"Total Employees\", \"Employees with Missing MD\"],\n",
-    "        \"Value\": [total_employees, missing_md_count]\n",
-    "    })\n",
+    "    # Ensure numeric columns are integers\n",
+    "    md_summary[\"Employees under MD\"] = md_summary[\"Employees under MD\"].astype(int)\n",
+    "    md_summary[\"GCB 3 Employees\"] = md_summary[\"GCB 3 Employees\"].astype(int)\n",
     "\n",
-    "    return md_summary, totals\n",
-    "```\n",
+    "    return md_summary\n",
     "\n",
-    "---\n",
+    "# md_summary = generate_overall_summary(flattened_df)\n",
+    "# md_summary.to_excel(writer, sheet_name=\"Overall Summary\", index=False)\n",
     "\n",
     "## 🧩 Function 2: `generate_md_summary(flattened_df, md_name=\"Muthu Ramanujam\")`\n",
     "\n",
@@ -203,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d32d805b",
+   "id": "245d4962",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8999e60",
+   "id": "bc0357f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fe05dea",
+   "id": "d8f947df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af168de2",
+   "id": "0e350b42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53ebd069",
+   "id": "3d982b0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +586,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "659abbcf",
+   "id": "17fbe590",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8687637",
+   "id": "f0c3e91e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75f9e865",
+   "id": "443d275c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0988bf4",
+   "id": "d2df34c9",
    "metadata": {},
    "outputs": [],
    "source": [
