--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,42 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53438dab",
+   "id": "e134707c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_flat_summary_for_pivot(flattened_df, month_list):\n",
+    "    df = flattened_df.copy()\n",
+    "    df[\"MD Name\"] = df[\"MD Name\"].fillna(\"Missing MD\")\n",
+    "\n",
+    "    records = []\n",
+    "\n",
+    "    for month in month_list:\n",
+    "        status_col = f\"Workstyle Met? {month}\"\n",
+    "\n",
+    "        for _, row in df.iterrows():\n",
+    "            records.append({\n",
+    "                \"MD Name\": row[\"MD Name\"],\n",
+    "                \"Month\": month,\n",
+    "                \"BF Level 1 Name\": row.get(\"BF Level 1 Name\", \"Missing\"),\n",
+    "                \"BF Level 2 Name\": row.get(\"BF Level 2 Name\", \"Missing\"),\n",
+    "                \"BF Level 3 Name\": row.get(\"BF Level 3 Name\", \"Missing\"),\n",
+    "                \"BF Level 4 Name\": row.get(\"BF Level 4 Name\", \"Missing\"),\n",
+    "                \"Workstyle Met Status\": row.get(status_col, \"Unknown\"),\n",
+    "                \"Employee ID\": row[\"Employee ID\"]\n",
+    "            })\n",
+    "\n",
+    "    return pd.DataFrame(records)\n",
+    "\n",
+    "\n",
+    "flat_summary = generate_flat_summary_for_pivot(flattened_df, month_list)\n",
+    "flat_summary.to_excel(writer, sheet_name=\"Summary\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "179b45f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "245d4962",
+   "id": "03ed7eaa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc0357f4",
+   "id": "3dffb783",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8f947df",
+   "id": "4b399fa5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e350b42",
+   "id": "3c654883",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d982b0a",
+   "id": "72af5e39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17fbe590",
+   "id": "115afaac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0c3e91e",
+   "id": "6dbc1a29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "443d275c",
+   "id": "35468209",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2df34c9",
+   "id": "88c123fd",
    "metadata": {},
    "outputs": [],
    "source": [
