--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,105 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e134707c",
+   "id": "48c54611",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Absolutely, Kirti — let’s enrich your `\"Unpivot\"` sheet with three new columns:\n",
+    "\n",
+    "- ✅ **%Met**: Share of employees marked \"Met\" out of total for that month/MD\n",
+    "- ✅ **%Not Met**: Share marked \"Not Met\"\n",
+    "- ✅ **MoM Change %**: Month-over-month change in %Met for each MD\n",
+    "\n",
+    "We’ll do this in Python so it’s baked into the export and responds to slicers in Excel.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 🧩 Step-by-Step Plan\n",
+    "\n",
+    "We’ll group by `MD Name` and `Month`, calculate counts, then merge back to the `\"Unpivot\"` sheet.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## ✅ Step 1: Calculate Monthly Totals and %s\n",
+    "\n",
+    "```python\n",
+    "def add_compliance_percentages(unpivot_df):\n",
+    "    df = unpivot_df.copy()\n",
+    "\n",
+    "    # Step 1: Count total per MD + Month\n",
+    "    total_counts = df.groupby([\"MD Name\", \"Month\"])[\"Employee ID\"].nunique().reset_index(name=\"Total\")\n",
+    "\n",
+    "    # Step 2: Count Met and Not Met\n",
+    "    met_counts = df[df[\"Workstyle Met Status\"] == \"Met\"].groupby([\"MD Name\", \"Month\"])[\"Employee ID\"].nunique().reset_index(name=\"Met\")\n",
+    "    not_met_counts = df[df[\"Workstyle Met Status\"] == \"Not Met\"].groupby([\"MD Name\", \"Month\"])[\"Employee ID\"].nunique().reset_index(name=\"Not Met\")\n",
+    "\n",
+    "    # Step 3: Merge all\n",
+    "    merged = total_counts.merge(met_counts, on=[\"MD Name\", \"Month\"], how=\"left\")\n",
+    "    merged = merged.merge(not_met_counts, on=[\"MD Name\", \"Month\"], how=\"left\")\n",
+    "    merged.fillna(0, inplace=True)\n",
+    "\n",
+    "    # Step 4: Calculate percentages\n",
+    "    merged[\"%Met\"] = (merged[\"Met\"] / merged[\"Total\"]).round(4)\n",
+    "    merged[\"%Not Met\"] = (merged[\"Not Met\"] / merged[\"Total\"]).round(4)\n",
+    "\n",
+    "    return df.merge(merged[[\"MD Name\", \"Month\", \"%Met\", \"%Not Met\"]], on=[\"MD Name\", \"Month\"], how=\"left\")\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## ✅ Step 2: Add MoM Change %\n",
+    "\n",
+    "```python\n",
+    "def add_mom_change(df):\n",
+    "    df = df.copy()\n",
+    "    # Convert Month to datetime for sorting\n",
+    "    df[\"Month Date\"] = pd.to_datetime(df[\"Month\"], format=\"%b-%y\")\n",
+    "    df.sort_values([\"MD Name\", \"Month Date\"], inplace=True)\n",
+    "\n",
+    "    # Calculate MoM change in %Met\n",
+    "    df[\"MoM Change %\"] = df.groupby(\"MD Name\")[\"%Met\"].diff().round(4)\n",
+    "\n",
+    "    return df\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## ✅ Step 3: Apply to Your Unpivot Sheet\n",
+    "\n",
+    "```python\n",
+    "unpivot_df = generate_flat_summary_for_pivot(flattened_df, month_list)\n",
+    "unpivot_df = add_compliance_percentages(unpivot_df)\n",
+    "unpivot_df = add_mom_change(unpivot_df)\n",
+    "```\n",
+    "\n",
+    "Then write it to Excel:\n",
+    "\n",
+    "```python\n",
+    "unpivot_df.to_excel(writer, sheet_name=\"Unpivot\", index=False)\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 🧠 Result: What You Get in Excel\n",
+    "\n",
+    "| MD Name | Month | Workstyle Met Status | Employee ID | %Met | %Not Met | MoM Change % |\n",
+    "|---------|--------|-----------------------|--------------|------|-----------|----------------|\n",
+    "| Muthu   | Apr-25 | Met                   | E123         | 0.80 | 0.10      | NaN            |\n",
+    "| Muthu   | May-25 | Not Met               | E124         | 0.75 | 0.15      | -0.05          |\n",
+    "| ...     | ...    | ...                   | ...          | ...  | ...       | ...            |\n",
+    "\n",
+    "These values will update dynamically in your pivot when you slice by BF Level, Manager, etc.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Let me know if you want to add %Exceeding or compliance bands next. You’re building a metrics engine that’s both precise and presentation-ready.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38ec5322",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "179b45f1",
+   "id": "4b34cc19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03ed7eaa",
+   "id": "ff1c3fc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3dffb783",
+   "id": "10f1cf2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b399fa5",
+   "id": "cb0663d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c654883",
+   "id": "e0163b37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72af5e39",
+   "id": "e65dc3ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "115afaac",
+   "id": "2d83cf35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6dbc1a29",
+   "id": "e437d4a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35468209",
+   "id": "09d6cd38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88c123fd",
+   "id": "57395cd2",
    "metadata": {},
    "outputs": [],
    "source": [
