--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,78 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48c54611",
+   "id": "8d9499da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Exactly, Kirti — and that’s a sharp insight. If you can **pre-calculate unique headcount per MD + Month** in your `\"Unpivot\"` sheet, then you don’t need Excel’s **Distinct Count** feature (which requires the Data Model). That unlocks **Calculated Fields**, which are only available in regular pivot tables.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## ✅ Strategy: Pre-calculate Unique Headcount in Python\n",
+    "\n",
+    "We’ll add a column like `\"Unique Headcount\"` to each row in `\"Unpivot\"` — same value repeated for all rows in that MD + Month group.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 🔧 Step 1: Calculate Unique Headcount\n",
+    "\n",
+    "```python\n",
+    "def add_unique_headcount(unpivot_df):\n",
+    "    df = unpivot_df.copy()\n",
+    "\n",
+    "    headcount = df.groupby([\"MD Name\", \"Month\"])[\"Employee ID\"].nunique().reset_index(name=\"Unique Headcount\")\n",
+    "    df = df.merge(headcount, on=[\"MD Name\", \"Month\"], how=\"left\")\n",
+    "\n",
+    "    return df\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 🔧 Step 2: Apply to Your Data\n",
+    "\n",
+    "```python\n",
+    "unpivot_df = generate_flat_summary_for_pivot(flattened_df, month_list)\n",
+    "unpivot_df = add_compliance_percentages(unpivot_df)\n",
+    "unpivot_df = add_mom_change(unpivot_df)\n",
+    "unpivot_df = add_unique_headcount(unpivot_df)\n",
+    "```\n",
+    "\n",
+    "Then write to Excel:\n",
+    "\n",
+    "```python\n",
+    "unpivot_df.to_excel(writer, sheet_name=\"Unpivot\", index=False)\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## ✅ Now in Excel: Use Calculated Fields\n",
+    "\n",
+    "1. Create a regular Pivot Table (do **not** add to Data Model)\n",
+    "2. Rows: `Month`, `MD Name`\n",
+    "3. Columns: `Workstyle Met Status` (optional)\n",
+    "4. Values:\n",
+    "   - `Unique Headcount` → set to **Max** or **Average**\n",
+    "   - `Employee ID` → set to **Count**\n",
+    "5. Insert Calculated Field:\n",
+    "   - Name: `Compliance %`\n",
+    "   - Formula: `=Met / 'Unique Headcount'`\n",
+    "\n",
+    "> 💡 Use single quotes around field names with spaces\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 🧠 Result\n",
+    "\n",
+    "Now you get dynamic compliance % that updates with slicers — and you’re using **Calculated Fields** without needing the Data Model.\n",
+    "\n",
+    "Let me know if you want to add other metrics like `%Exceeding` or compliance bands. You’re engineering this dashboard with precision and flexibility.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1f507f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38ec5322",
+   "id": "d87d6a7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b34cc19",
+   "id": "5de9c5d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff1c3fc8",
+   "id": "e4e2d931",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10f1cf2a",
+   "id": "f5d949ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb0663d9",
+   "id": "264863ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0163b37",
+   "id": "dcb881c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e65dc3ca",
+   "id": "27388eb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,7 +790,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d83cf35",
+   "id": "64aaf6a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,7 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e437d4a3",
+   "id": "61d47967",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,7 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09d6cd38",
+   "id": "46a51900",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57395cd2",
+   "id": "fddae4b3",
    "metadata": {},
    "outputs": [],
    "source": [
