--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,105 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d9499da",
+   "id": "2f8baff9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import win32com.client as win32\n",
+    "\n",
+    "excel = win32.gencache.EnsureDispatch(\"Excel.Application\")\n",
+    "excel.Visible = True\n",
+    "\n",
+    "wb = excel.Workbooks.Open(r\"FULL_PATH_TO_YOUR_FILE.xlsx\")  # Replace with your actual file path\n",
+    "\n",
+    "# Delete existing Dashboard sheet if present\n",
+    "for sheet in wb.Sheets:\n",
+    "    if sheet.Name == \"Dashboard\":\n",
+    "        sheet.Delete()\n",
+    "        break\n",
+    "\n",
+    "# Add new Dashboard sheet\n",
+    "dashboard = wb.Sheets.Add()\n",
+    "dashboard.Name = \"Dashboard\"\n",
+    "\n",
+    "# Write title\n",
+    "dashboard.Range(\"A1\").Value = \"Hybrid Workstyle Dashboard Summary View\"\n",
+    "dashboard.Range(\"A2\").Value = \"Hybrid Workstyle Dashboard Summary View\"\n",
+    "dashboard.Range(\"A3:A4\").ClearContents()\n",
+    "\n",
+    "# Reference Unpivot sheet\n",
+    "unpivot = wb.Sheets(\"Unpivot\")\n",
+    "last_row = unpivot.Cells(unpivot.Rows.Count, 1).End(-4162).Row  # xlUp = -4162\n",
+    "last_col = unpivot.Cells(1, unpivot.Columns.Count).End(-4159).Column  # xlToLeft = -4159\n",
+    "source_range = unpivot.Range(unpivot.Cells(1, 1), unpivot.Cells(last_row, last_col))\n",
+    "\n",
+    "# Create Pivot Cache\n",
+    "pivot_cache = wb.PivotCaches().Create(\n",
+    "    SourceType=1,  # xlDatabase\n",
+    "    SourceData=source_range.Address(True, True, win32.constants.xlA1, True),\n",
+    ")\n",
+    "\n",
+    "# Create Pivot Table at row 17\n",
+    "pivot_table = dashboard.PivotTables().Add(\n",
+    "    PivotCache=pivot_cache,\n",
+    "    TableDestination=dashboard.Cells(17, 1),\n",
+    "    TableName=\"HybridPivot\"\n",
+    ")\n",
+    "\n",
+    "# Configure Pivot Table\n",
+    "pivot_table.PivotFields(\"Month\").Orientation = 1  # xlRowField\n",
+    "pivot_table.PivotFields(\"Month\").Position = 1\n",
+    "pivot_table.PivotFields(\"Month\").AutoSort(1, \"Month\")  # xlAscending = 1\n",
+    "\n",
+    "pivot_table.PivotFields(\"Workstyle Met Status\").Orientation = 2  # xlColumnField\n",
+    "pivot_table.PivotFields(\"Workstyle Met Status\").Position = 1\n",
+    "\n",
+    "pivot_table.AddDataField(pivot_table.PivotFields(\"Unique Headcount\"), \"Headcount\", -4112)  # xlCount = -4112\n",
+    "\n",
+    "# Remove row totals\n",
+    "pivot_table.RowAxisLayout(1)  # xlTabularRow\n",
+    "pivot_table.ShowDrillIndicators = False\n",
+    "pivot_table.RowGrand = False\n",
+    "\n",
+    "# Add slicers\n",
+    "slicer_cache = wb.SlicerCaches.Add(pivot_table, \"MD Name\")\n",
+    "slicer_cache.Slicers.Add(dashboard, \"\", \"MD Name\", \"MD Name\", 10, 5, 150, 120)\n",
+    "\n",
+    "slicer_cache2 = wb.SlicerCaches.Add(pivot_table, \"BF Level 2 Name\")\n",
+    "slicer_cache2.Slicers.Add(dashboard, \"\", \"BF Level 2 Name\", \"BF Level 2 Name\", 170, 5, 150, 120)\n",
+    "\n",
+    "slicer_cache3 = wb.SlicerCaches.Add(pivot_table, \"BF Level 3 Name\")\n",
+    "slicer_cache3.Slicers.Add(dashboard, \"\", \"BF Level 3 Name\", \"BF Level 3 Name\", 330, 5, 150, 120)\n",
+    "\n",
+    "slicer_cache4 = wb.SlicerCaches.Add(pivot_table, \"BF Level 4 Name\")\n",
+    "slicer_cache4.Slicers.Add(dashboard, \"\", \"BF Level 4 Name\", \"BF Level 4 Name\", 490, 5, 150, 120)\n",
+    "\n",
+    "# Add formula headers\n",
+    "dashboard.Range(\"G18\").Value = \"%Met\"\n",
+    "dashboard.Range(\"H18\").Value = \"MoM Change%\"\n",
+    "\n",
+    "# Add formulas starting from row 19\n",
+    "row = 19\n",
+    "while dashboard.Cells(row, 2).Value != \"\":\n",
+    "    dashboard.Cells(row, 7).Formula = f'=IF(B{row}=0,\"\",B{row}/F{row})'\n",
+    "    dashboard.Cells(row, 8).Formula = f'=IF(OR(G{row-1}=\"\",G{row}=\"\"),\"\",G{row}-G{row-1})'\n",
+    "    row += 1\n",
+    "\n",
+    "# First MoM Change row\n",
+    "dashboard.Cells(19, 8).Value = \"-\"\n",
+    "\n",
+    "# Format G and H columns as percentage\n",
+    "dashboard.Range(f\"G19:G{row-1}\").NumberFormat = \"0.00%\"\n",
+    "dashboard.Range(f\"H20:H{row-1}\").NumberFormat = \"0.00%\"\n",
+    "\n",
+    "# Optional: Save workbook\n",
+    "# wb.Save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed9c232a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1f507f4",
+   "id": "ec8aac40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d87d6a7d",
+   "id": "de3a579d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5de9c5d0",
+   "id": "454c2487",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4e2d931",
+   "id": "51b87a55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5d949ba",
+   "id": "fe47a723",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "264863ab",
+   "id": "77cef4c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +742,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcb881c1",
+   "id": "922e5c8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27388eb3",
+   "id": "0361342c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +888,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64aaf6a6",
+   "id": "15d78cd6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61d47967",
+   "id": "8ba3a504",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46a51900",
+   "id": "327bf163",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +983,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fddae4b3",
+   "id": "f5aa143d",
    "metadata": {},
    "outputs": [],
    "source": [
